Fixed mobile window resize on overflow

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -3,3 +3,9 @@ html, body, #root {
     margin: 0;
     padding: 0;
 }
+
+#root {
+    position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
